# chainofexperience

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TRAINING.md  evaluate.py  pyproject.toml  train.py
agent/: README.md  __init__.py  browser_tools.py  run_agent.py  task_tracker.py  video_recorder.py  web_agent.py
models/: __init__.py  experience_encoder.py
scripts/: __init__.py  export_training_data.py  init_db.py
